<resources>
    <string name="app_name">NeWork</string>
    <string name="post_s_author">post\'s author</string>
    <string name="published_date">Published date</string>
    <string name="postTextContent">Шляпа — это головной убор, который носили в Древней Греции. В наше время шляпы носят для защиты от солнца или просто для красоты.</string>
    <string name="events">Events</string>
    <string name="posts">Posts</string>
    <string name="users">Users</string>
    <string name="logout">logout</string>
    <string name="signin">SignIn</string>
    <string name="signup">SignUp</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="picking_photo_error">Picking photo error</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="fab_click_message">Чтобы добавить пост, необходимо зарегестрироваться или войти</string>
    <string name="fab_click_message_event">Чтобы добавить событие, необходимо зарегестрироваться или войти</string>
    <string name="fab_click_message_job">Чтобы создать карточку работы, необходимо зарегестрироваться или войти</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="retry">Retry</string>
    <string name="something_went_wrong_try_again">Something went wrong. Try again</string>
    <string name="user_s_name">User\'s name</string>
    <string name="user_s_login">User\'s login</string>
    <string name="users_are_not_loaded_try_again">Users are not loaded. Try again</string>
    <string name="try_loading_users">Try loading users</string>
    <string name="author_job">Author job</string>
    <string name="likers">Likers</string>
    <string name="mentioned">Mentioned</string>
    <string name="event_s_author">Event\'s author</string>
    <string name="event_text_content">Приглашаем вас на увлекательную лекцию о том, как правильно дрессировать котиков! Опытный кинолог расскажет вам о различных техниках и методах обучения, поделится забавными случаями из практики и ответит на ваши вопросы.</string>
    <string name="online_status">Online</string>
    <string name="eventdatetime">EventDateTime</string>
    <string name="_2">2</string>
    <string name="participants">Participants</string>
    <string name="speakers">Speakers</string>
    <string name="event">Event</string>
    <string name="job_name">ПАО ПСБ</string>
    <string name="_1_2020">1 августа 2020</string>
    <string name="_1_2019">1 марта 2019</string>
    <string name="dash">-</string>
    <string name="job_poisiton">Главный инженер-программист</string>
    <string name="job_link">https://m2.material.io/components/cards</string>
    <string name="wall">Wall</string>
    <string name="jobs">Jobs</string>
    <string name="logout_profile">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="position">Position</string>
    <string name="link">Link</string>
    <string name="start_data">27.09.2023</string>
    <string name="finish_data">30.10.2023</string>
    <string name="select_date">Select date</string>
    <string name="enter_dates">Enter Dates</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="end_date">End date</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="create">Create</string>
    <string name="choose_where_open_your_image">Choose where open your image</string>
    <string name="choose_where_open_your_video">Choose where open your video</string>
    <string name="choose_where_open_your_audio">Choose where open your audio</string>
    <string name="saveusermentioned">saveusermentioned</string>
    <string name="choose_users">Choose Users</string>
    <string name="new_event">New Event</string>
    <string name="nework">NeWork</string>
    <string name="new_job">New Job</string>
    <string name="post">Post</string>
    <string name="account">Account</string>
    <string name="you">You</string>
    <string name="username">UserName</string>
    <string name="savechooseuser">saveChooseUser</string>
    <string name="share_event">Share event</string>
    <string name="savenewevent">saveNewEvent</string>
    <string name="savenewjob">saveNewJob</string>
    <string name="savenewpost">saveNewPost</string>
    <string name="sharepost">sharePost</string>
    <string name="authorize">authorize</string>
    <string name="event_date">Event date</string>
    <string name="mm_dd_yyyy_hh_mm">MM/dd/yyyy HH:mm</string>
    <string name="date_type">Date type</string>
    <string name="https_netomedia_ru">https://netomedia.ru/</string>
    <string name="no_job_experience_yet">No job experience yet</string>
    <string name="post_empty_likers_text">Этот пост пока ещё никому не нравится, но все впереди ;)</string>
    <string name="event_likers_empty_text">Это событие пока ещё никому не нравится, но всё ещё впереди ;)</string>
    <string name="here_will_be_your_jobs">Here will be your jobs</string>
    <string name="clear">Clear</string>
    <string name="online_type_status">Online</string>
    <string name="offline_type_status">Offline</string>
    <string name="incorrect_login_or_password">Incorrect login or password</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="startdate">StartDate</string>
    <string name="enddate">EndDate</string>
    <string name="write_your_text_here">Write your text here</string>
    <string name="date_time_error_text">Введите дату в правильном формате</string>
    <string name="empty_job_text_without_auth">Авторизируйтесь, чтобы видеть список работа</string>
    <string name="come_into_account">Войти</string>
    <string name="save_photo">Save photo</string>
    <string name="profile_photo">Profile photo</string>
    <string name="pass_do_not_match">Пароли не совпадают</string>
    <string name="registration_error">Произошла ошибка при регистрации. Попробуйте ещё раз</string>
    <string name="incorrect_data">Неверный логин или пароль</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
</resources>