<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/jobName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jobName"
            android:text="@string/_1_2019"/>

        <TextView
            android:id="@+id/dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/startDate"
            app:layout_constraintTop_toTopOf="@id/startDate"
            app:layout_constraintBottom_toBottomOf="@id/startDate"
            android:layout_marginStart="8dp"
            android:text="@string/dash"/>

        <TextView
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@id/startDate"
            app:layout_constraintStart_toEndOf="@id/startDate"
            android:text="@string/_1_2020"/>

        <TextView
            android:id="@+id/jobPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_poisiton"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/startDate"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/jobLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jobPosition"
            android:layout_marginTop="16dp"
            android:text="@string/job_link"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteJobButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:icon="@drawable/delete_forever"
            app:iconSize="24dp"
            android:background="@android:color/transparent"
            app:iconTint="@android:color/black"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>