<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="48dp"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6E0E9"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/selectDatesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enterDates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/enter_dates"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectDatesTitle" />

        <ImageView
            android:id="@+id/enterDatesIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@id/enterDates"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/enterDates"
            app:srcCompat="@drawable/event" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/selectDatesBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="enterDates, enterDatesIcon"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/dateFormsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/selectDatesBarrier">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/selectStartDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:hint="Date"
                app:layout_constraintTop_toBottomOf="@id/selectDatesBarrier"
                app:placeholderText="@string/mm_dd_yyyy">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/selectEndDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:hint="Date"
                app:layout_constraintBottom_toBottomOf="@id/selectStartDate"
                app:layout_constraintStart_toEndOf="@id/selectStartDate"
                app:placeholderText="@string/end_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="end"
            app:layout_constraintTop_toBottomOf="@id/dateFormsLayout">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:text="@string/cancel"
                android:textColor="#6750A4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/okButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:background="@android:color/transparent"
                android:text="@string/ok"
                android:textColor="#6750A4" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>