<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="10dp"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="#FEF7FF">

        <ImageView
            android:id="@+id/eventAvatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/default_ava"
            />

        <TextView
            android:id="@+id/eventAuthorName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/eventAvatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/eventPublishedDate"
            app:layout_constraintEnd_toStartOf="@id/eventMenuButton"
            android:text="@string/event_s_author"
            android:ellipsize="end"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/eventPublishedDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/eventAuthorName"
            app:layout_constraintStart_toEndOf="@id/eventAvatar"
            app:layout_constraintEnd_toStartOf="@id/eventMenuButton"
            android:layout_marginStart="16dp"
            android:text="@string/published_date" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eventMenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:icon="@drawable/menu_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.AppTheme.IconButton"
            />

        <ImageView
            android:id="@+id/eventAttachmentImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/eventAvatar"
            />


        <TextView
            android:id="@+id/eventType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eventAttachmentImage"/>

        <TextView
            android:id="@+id/eventDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/eventdatetime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eventType"/>

        <TextView
            android:id="@+id/eventTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eventDateTime"
            android:text="@string/event_text_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eventLikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eventTextContent"
            app:icon="@drawable/ic_like"
            tools:checked="false"
            tools:text="1"
            style="@style/Widget.AppTheme.LikeCheckBox"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eventShareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/eventLikeButton"
            app:layout_constraintTop_toTopOf="@id/eventLikeButton"
            app:layout_constraintBottom_toBottomOf="@id/eventLikeButton"
            app:icon="@drawable/share"
            style="@style/Widget.AppTheme.LikeCheckBox"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eventParticipantsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/eventLikeButton"
            app:layout_constraintBottom_toBottomOf="@id/eventLikeButton"
            app:icon="@drawable/people_outline"
            android:text="@string/_2"
            style="@style/Widget.AppTheme.LikeCheckBox"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>